Bug 446689 - xpcshell's load() function doesn't close file handle; r+sr=mrbkap